🛠️ Add (support): Add jupyter support for interactive notebooks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ packages = [{include = "prds_2024_telcocustomerchurn"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 isort = "^5.13.2"
-black = "^24.1.1"
+black = {extras = ["jupyter"], version = "^24.1.1"}
 ruff = "^0.2.0"
 mypy = "^1.8.0"
 pre-commit = "^3.6.0"
@@ -68,6 +68,9 @@ pandas = "^2.2.0"
 matplotlib = "^3.8.2"
 seaborn = "^0.13.2"
 scipy = "^1.12.0"
+scikit-learn = "^1.4.0"
+ipython = "^8.21.0"
+jupyter = "^1.0.0"
 
 
 [build-system]
@@ -132,6 +135,7 @@ exclude = [
 line-length = 80
 indent-width = 4
 target-version = "py311"
+extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
 select = [
