--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,6 +48,7 @@ repos:
     rev: v0.2.0
     hooks:
       - id: ruff
+        types_or: [ python, jupyter ]
         args: [ --fix, --exit-non-zero-on-fix ]
 
   - repo: local
