--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,20 +57,23 @@ classifiers = [
 packages = [{include = "prds_2024_telcocustomerchurn"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.13"
 isort = "^5.13.2"
-black = {extras = ["jupyter"], version = "^24.1.1"}
-ruff = "^0.2.0"
+black = {extras = ["jupyter"], version = "^24.2.0"}
+ruff = "^0.2.2"
 mypy = "^1.8.0"
-pre-commit = "^3.6.0"
-numpy = "^1.26.3"
-pandas = "^2.2.0"
-matplotlib = "^3.8.2"
+pre-commit = "^3.6.2"
+numpy = "^1.26.4"
+pandas = "^2.2.1"
+matplotlib = "^3.8.3"
 seaborn = "^0.13.2"
-scipy = "^1.12.0"
-scikit-learn = "^1.4.0"
-ipython = "^8.21.0"
+scipy = "^1.11.4"
+scikit-learn = "^1.4.1.post1"
+imbalanced-learn = "^0.12.0"
+pygam = "^0.9.1"
+ipython = "^8.22.1"
 jupyter = "^1.0.0"
+jupyterlab = "^4.1.2"
 
 
 [build-system]
