--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,28 +28,47 @@ repos:
           - --py3-plus
           - --keep-runtime-typing
 
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.3.3
+    hooks:
+      # Run the linter.
+      - id: ruff
+        args: [ "--fix", "--exit-non-zero-on-fix", "--config",
+                "pyproject.toml" ]
+
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
       - id: isort
+        name: isort (python)
+        args: [ "--sp", "pyproject.toml" ]
 
   # Using this mirror lets us use mypyc-compiled black, which is about 2x faster
   - repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 24.2.0
+    rev: 24.3.0
     hooks:
       - id: black
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.8.0
-    hooks:
-      - id: mypy
+        args: [ "--config", "pyproject.toml" ]
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.3.0
+    rev: v0.3.3
     hooks:
-      - id: ruff
-        types_or: [ python, jupyter ]
-        args: [ --fix, --exit-non-zero-on-fix ]
+      # Run the formatter.
+      - id: ruff-format
+        args: [ "--config", "pyproject.toml" ]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.9.0
+    hooks:
+      - id: mypy
+        args: [ "--config-file", "pyproject.toml" ]
+
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.8
+    hooks:
+      - id: bandit
+        args: [ "-c", "pyproject.toml" ]
+        additional_dependencies: [ "bandit[toml]" ]
 
   - repo: local
     hooks:
