--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,12 +6,16 @@
     },
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnSave": true,
+    "editor.formatOnType": true,
     "editor.rulers": [
       80,
       100
     ],
+    "editor.semanticHighlighting.enabled": true,
     "editor.snippetSuggestions": "top",
-    "editor.tabSize": 4
+    "editor.tabSize": 4,
+    "files.insertFinalNewline": true,
+    "files.trimTrailingWhitespace": true,
   },
   "black-formatter.args": [
     "--config",
