--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,18 +60,19 @@ packages = [{include = "prds_2024_telcocustomerchurn"}]
 python = ">=3.11,<3.13"
 isort = "^5.13.2"
 black = {extras = ["jupyter"], version = "^24.4.2"}
-ruff = "^0.4.8"
-mypy = "^1.10.0"
+ruff = "^0.5.1"
+mypy = "^1.10.1"
 pre-commit = "^3.7.1"
 numpy = "^1.26.4"
 pandas = "^2.2.2"
-matplotlib = "^3.9.0"
+matplotlib = "^3.9.1"
 seaborn = "^0.13.2"
 scipy = "^1.11.4"
-scikit-learn = "^1.5.0"
+scikit-learn = "^1.5.1"
 imbalanced-learn = "^0.12.3"
 pygam = "^0.9.1"
 jupyter = "^1.0.0"
+urllib3 = "^2.2.2"
 
 
 [build-system]
